refactor: lightning-db major refactor
